// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment test renders correctly - no proprties 1`] = `
<div
  className="Comment_panel"
>
  <img
    alt=""
    className="Social_comments_image"
    src={undefined}
  />
  <div
    className="Comment_comment_panel"
  >
    <a
      className="Comment_profile"
      href="#"
    />
    <span
      className="Comment_comment"
    />
  </div>
</div>
`;

exports[`Comment test renders correctly - proprties 1`] = `
<div
  className="Comment_panel"
>
  <img
    alt=""
    className="Social_comments_image"
    src="https://scontent.ftlv4-1.fna.fbcdn.net/v/t1.0-1/p80x80/n.jpg"
  />
  <div
    className="Comment_comment_panel"
  >
    <a
      className="Comment_profile"
      href="#"
    >
      Vevo
    </a>
    <span
      className="Comment_comment"
    >
      Hi there.
    </span>
  </div>
</div>
`;
